--- a/realtimemap/templates/admin/layout.html
+++ b/realtimemap/templates/admin/layout.html
@@ -1,11 +1,13 @@
 {% extends "@starlette-admin/layout.html" %}
 {% block head_css %}
     {{ super() }}
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', path='icons/favicon.ico') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='admin/css/root.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='admin/css/btn.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='admin/css/table.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='admin/css/form.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='admin/css/sidebar.css') }}">
+
 {% endblock %}
 
 {% block navbar %}
