--- a/realtimemap/templates/admin/view/mark_detail.html
+++ b/realtimemap/templates/admin/view/mark_detail.html
@@ -1,6 +1,6 @@
 {% extends "detail.html" %}
-{% from "components/map.html" import map_component %}
-{% from "components/card.html" import card %}
+{% from "components/common/map.html" import map_component %}
+{% from "components/common/card.html" import card %}
 
 {% block content %}
     <style>
