Fix: Timezone for models + migrations
Feat: Get data for index page with gather async

Fix: Styles

--- a/realtimemap/static/admin/css/kpi.css
+++ b/realtimemap/static/admin/css/kpi.css
@@ -19,7 +19,7 @@
     position: relative;
     margin-bottom: 0;
     height: 100%;
-    min-width: 300px;
+    /* min-width: 300px; */ /* Убрано для адаптивности */
 }
 
 .kpi-card:hover {
