--- a/realtimemap/templates/admin/components/kpi/kpi_card.html
+++ b/realtimemap/templates/admin/components/kpi/kpi_card.html
@@ -10,7 +10,7 @@
       - color: Цветовая тема ('primary', 'success', 'danger', 'warning', 'info')
       - trend_data: Данные для отображения тренда (dict с ключами: change, change_percent, trend_icon, trend_color)
   #}
-    <div class="col-md-3">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-3">
         <div class="kpi-card kpi-card--{{ color }}">
             <div class="kpi-card__body">
                 <div class="kpi-card__content">
