--- a/realtimemap/templates/admin/layout.html
+++ b/realtimemap/templates/admin/layout.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='admin/css/form.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='admin/css/sidebar.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='admin/css/kpi.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='css/kpi-cards-responsive.css') }}">
 {% endblock %}
 
 {% block navbar %}
